<resources>
    <string name="app_name">ShopDemo</string>
    <array name="main_bottomtab_txt">
        <item name="tab_txt_shouye">首页</item>
        <item name="tab_txt_shequ">社区</item>
        <item name="tab_txt_chart">购物车</item>
        <item name="tab_txt_wode">我的</item>
    </array>
    <string name="txt_my_order">我的订单</string>
    <string name="txt_topay">待支付</string>
    <string name="txt_tosend">待发货</string>
    <string name="txt_toreceive">待收货</string>
    <string name="txt_tocomment">待评价</string>
    <string name="txt_seemore">查看更多 > </string>
    <string name="txt_coupon">优惠券</string>
    <string name="vip_txt">大众会员</string>
    <string name="txt_aboutus">关于我们</string>
    <string name="txt_title_shequ">社区</string>
    <string name="signup">登录</string>
    <string name="signin">注册</string>
    <string name="userphone">手机号</string>
    <string name="phoneorname">手机号/用户名</string>
    <string name="nickname">昵称</string>
    <string name="password">密码</string>
    <string name="gotosign">去登陆 ></string>
    <string name="email">邮箱</string>
    <string name="surepwd">确认密码</string>
    <string name="username">账户名</string>
    <string name="noaccount_signin">没有账户？注册</string>
    <string name="passworderror_text">密码不能少于6位</string>
    <string name="phonenumber_error_text">手机号码类型有误</string>
    <string name="signuporin">登录/注册</string>
    <string name="txt_category">分类</string>
    <string name="txt_maylikeheader">---为你推荐---</string>
    <string name="txt_timetoby">限时抢购</string>
    <string name="upformore">加载更多...</string>
    <string name="selectall">全选</string>
    <string name="topay_chart">支付</string>
    <string name="pay_chart">支付</string>
    <string name="txt_chart">购物车</string>
    <string name="clearall">清空</string>
    <string name="ensureorder">确认订单</string>
    <string name="ensuretopay">确认支付</string>
    <string name="editaddress">编辑地址</string>
    <string name="list">列表</string>
    <string name="model_unit">规格型号</string>
    <string name="tochart">加入购物车</string>
    <string name="bynow">立即购买</string>
    <string name="all">全部</string>
    <string name="sure">确定</string>
    <string name="txt_selectmodelunit">选择规格型号</string>
    <string name="comment">评论</string>
    <string name="goodsdetails">详情</string>
    <string name="goodsshow">商品</string>
    <string name="addcomment_hint">说点什么...</string>
    <string name="shequ_comment_title">社区评论</string>
    <string name="article_content">文章</string>
    <string name="loading">正在加载...</string>
    <string name="reminder">提示</string>
    <string name="sure_exit">确定退出当前账户并清除用户数据？</string>
    <string name="exit">退出</string>
    <string name="cancle">再想想</string>
    <string name="pleasedolater">操作失败，请稍后重试</string>
    <string name="sucess">操作成功</string>
    <string name="tobepay">待支付</string>
    <string name="tobesend">待发货</string>
    <string name="tobereceive">待收货</string>
    <string name="tobecomment">待评价</string>
    <string name="change_personal_data">修改个人信息</string>
    <string name="btn_update_data">提交</string>
    <string name="txt_change_password">修改密码</string>
    <string name="old_password">旧密码</string>
    <string name="new_password">新密码</string>
    <string name="select_model">请选择规格型号</string>
    <string name="please_signin">请先登录账户</string>
    <string name="addchart_sucess">已加入购物车</string>
    <string name="chartisempty">购物车里是空的</string>
    <string name="select_addr">请选择地址 ></string>
    <string name="check_wuliu">查看物流</string>
    <string name="new_addr">新增地址</string>
    <string name="please_new_addr">请添加地址</string>
    <string name="wechartpay">微信</string>
    <string name="zhifubaopay">支付宝</string>
    <string name="suretopay">确认支付</string>
    <string name="select_pay_type">选择支付方式</string>
    <string name="saysomething_comment">说点什么吧...</string>
    <string name="new_comment">新增评论</string>
    <string name="search_goods">搜索商品</string>
    <string name="search_btn">搜索</string>
    <string name="default_searchword">护肤</string>
    <string name="sortbyprice">按价格排序</string>
    <string name="pricelowtohigh">价格从低到高</string>
    <string name="pricehightolow">价格从高到低</string>
    <string name="txt_timetonext">距下场：</string>
    <string name="txt_timelimit">限时抢购，先到先得</string>
    <string name="nodata_clicktorefresh">暂无数据，点击刷新></string>
    <string name="shooping_now">抢购中</string>
    <string name="shopping_later">未开始</string>
    <string name="by_now">马上抢</string>
    <string name="good_count">合计支付：</string>
    <string name="commit_aftersign">登陆后添加评论</string>
    <string name="nocoupon">暂无优惠券信息</string>
    <string name="not_signin">未登录</string>
    <string name="commentrate">评分等级：</string>
    <string name="onestar">一星</string>
    <string name="twostar">两星</string>
    <string name="threestar">三星</string>
    <string name="fourstar">四星</string>
    <string name="fivestar">五星</string>
    <string name="badcomment">差评</string>
    <string name="middlecomment">中评</string>
    <string name="goodcomment">好评</string>
    <string name="default_addr">设为默认地址</string>
    <string name="addr_manage">地址管理</string>
    <string name="is_default_addr">默认</string>
    <string name="see_order_detail">订单详情 ></string>
    <string name="commit">提交</string>
    <string name="add_addr">新增地址</string>
    <string name="gotopay">去支付</string>
    <string name="gotocomment"></string>
    <string name="alreadsend">待发货</string>
    <string name="orderdetail">订单详情</string>
</resources>
