<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".personspace.ChangePassWordActivity">

    <include layout="@layout/top_bar" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/edtlayout_change_oldpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/edit_margin_lr_thirty"
        android:layout_marginRight="@dimen/edit_margin_lr_thirty"
        android:layout_marginTop="@dimen/margin_ten"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/TextErrorAppearance"
        app:hintAnimationEnabled="true"
        app:hintTextAppearance="@style/HintErrorAppearance"
        app:passwordToggleEnabled="true"
        app:theme="@style/TextInputLayoutTheme">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edt_change_oldpassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/old_password"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/edtlayout_change_newpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/edit_margin_lr_thirty"
        android:layout_marginRight="@dimen/edit_margin_lr_thirty"
        android:layout_marginTop="@dimen/margin_ten"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/TextErrorAppearance"
        app:hintAnimationEnabled="true"
        app:hintTextAppearance="@style/HintErrorAppearance"
        app:passwordToggleEnabled="true"
        app:theme="@style/TextInputLayoutTheme">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edt_change_newpassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/new_password"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/edtlayout_change_surepassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/edit_margin_lr_thirty"
        android:layout_marginRight="@dimen/edit_margin_lr_thirty"
        android:layout_marginTop="@dimen/margin_ten"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/TextErrorAppearance"
        app:hintAnimationEnabled="true"
        app:hintTextAppearance="@style/HintErrorAppearance"
        app:passwordToggleEnabled="true"
        app:theme="@style/TextInputLayoutTheme">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edt_change_surepassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/surepwd"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/btn_signin"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/activity_signtxt_margin"
        android:layout_marginRight="@dimen/activity_signtxt_margin"
        android:layout_marginTop="@dimen/edit_margin_lr_thirty"
        android:background="@drawable/btn_signup_bg"
        android:text="@string/commit" />
</LinearLayout>