<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".goods.TimeToByListActivity">

    <include layout="@layout/top_bar"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_transparent"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="3dp"
        android:layout_marginTop="3dp"
        android:background="@drawable/bg_timetobylist_header"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="1dp"
        android:paddingLeft="@dimen/margin_fifteen"
        android:paddingRight="@dimen/margin_fifteen"
        android:paddingTop="2dp">

        <TextView
            android:id="@+id/txt_time_period"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="17:00:00-18:00:00"
            android:textColor="@color/white"
            android:textSize="@dimen/margin_fifteen"
            android:textStyle="bold"/>

        <TextView

            android:id="@+id/txt_time_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="抢购中"
            android:textColor="@color/white"
            android:textSize="12dp"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="3dp"
        android:paddingLeft="@dimen/margin_five"
        android:paddingRight="@dimen/margin_five"
        android:paddingTop="3dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/txt_timelimit"
            android:textSize="10dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_timetonext"
                android:textSize="10dp"/>

            <TextView
                android:id="@+id/txt_time_hour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="3dp"
                android:background="@color/black"
                android:padding="1dp"
                android:text="02"
                android:textColor="@color/white"
                android:textSize="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="："
                android:textSize="10dp"/>

            <TextView
                android:id="@+id/txt_time_minute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="3dp"
                android:background="@color/black"
                android:padding="1dp"
                android:text="05"
                android:textColor="@color/white"
                android:textSize="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="："
                android:textSize="10dp"/>

            <TextView
                android:id="@+id/txt_time_second"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/black"
                android:padding="1dp"
                android:text="08"
                android:textColor="@color/white"
                android:textSize="10dp"/>
        </LinearLayout>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_transparent"/>

    <TextView
        android:id="@+id/txt_nodata"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_twenty"
        android:text="@string/nodata_clicktorefresh"
        android:textColor="@color/gray"
        android:visibility="gone"
        />

    <ListView
        android:id="@+id/list_timetoby"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="3dp"
        android:layout_weight="1"
        android:divider="@color/white"
        android:dividerHeight="5dp"
        android:paddingLeft="@dimen/margin_five"
        android:paddingRight="@dimen/margin_five"/>

</LinearLayout>